--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,21 @@
 name = "hubble-constant"
 version = "0.1.0"
 edition = "2021"
-
+authors = [
+    "Prithoo Medhi <prithoo.medhi@mslate.ai>",
+    "Arkiralor <prithoo11335@gmail.com>"
+]
+description = "A console program to calculate the Hubble constant"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/Arkiralor/HubbleConstant"
+readme = "README.md"
+homepage = ""
+documentation = ""
+keywords = ["hubble", "constant", "cosmology", "astronomy", "physics"]
+categories = ["science", "astronomy", "physics", "cli", "console"]
+publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "1.0.104", features = ["derive"] }
-serde_json = "1.0.48"
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = "1.0.96"
